[package]
name = "future-timer"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.65.0"
authors = ["Hayden Stainsby <hds@caffeineconcepts.com>"]
readme = "README.md"
homepage = "https://github.com/hds/async-timing"
repository = "https://github.com/hds/async-timing"
description = """
Future timing instrumentation.

Instrumentation to record the busy and idle time taken by a future as it is driven to
completion.
"""
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = ["debugging", "async"]

[dependencies]
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
