[package]
name = "future-timing"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.70.0"
authors = ["Hayden Stainsby <hds@caffeineconcepts.com>"]
readme = "README.md"
homepage = "https://github.com/hds/future-timing"
repository = "https://github.com/hds/future-timing"
description = """
Future timing instrumentation.

Instrumentation to record the busy and idle time taken by a future as it is driven to
completion.
"""
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = ["debugging", "async", "timing"]

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
unreachable_pub = "warn"

[lints.clippy]
cargo = "deny"
complexity = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"

[lints.rustdoc]
all = "deny"

[dependencies]
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
